--- a/index-default.html
+++ b/index-default.html
@@ -78,7 +78,7 @@
                     <div class="main-menu">
                         <div class="navbar navbar-cus">
                             <div class="navbar-header">
-                                <a href="index-default.html" class="navbar-brand"><span><img src="favicon/android-chrome-150x77.png" alt="Logo"></span></a> <!--change the logo here or brand name here-->
+                                <a href="index-default.html" class="navbar-brand"><span><img src="favicon/android-chrome-150x77.png" alt="Logo"></span></a> 
                                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" style="color: #0539cb;">
                                     <span class="sr-only">Toggle navigation</span>
                                     <span class="icon-bar"></span>
@@ -1103,9 +1103,6 @@
 
     <!--Validator js-->
     <script src="js/validator.js"></script>
-
-    <!--Contact js-->
-    <script src="js/contact.js"></script>
 
     <!--waypoint js-->
     <script src="js/jquery.waypoints.min.js"></script>
