--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="main-menu">
                         <div class="navbar navbar-cus">
                             <div class="navbar-header">
-                                <a href="index-default.html" class="navbar-brand"><span><img src="favicon/android-chrome-150x77.png" alt="Logo"></span></a> 
+                                <a href="index.html" class="navbar-brand"><span><img src="favicon/android-chrome-150x77.png" alt="Logo"></span></a> 
                                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" style="color: #0539cb;">
                                     <span class="sr-only">Toggle navigation</span>
                                     <span class="icon-bar"></span>
@@ -1117,5 +1117,5 @@
     <script src="js/main.js"></script>
 </body>
 
-<!-- Mirrored from mourithemes.com/shoma/shoma/index-default.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 10 Apr 2024 18:46:21 GMT -->
+
 </html>
