--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <div class="main-menu">
                         <div class="navbar navbar-cus">
                             <div class="navbar-header">
-                                <a href="index.html" class="navbar-brand"><span><img src="favicon/android-chrome-150x77.png" alt="Logo"></span></a> 
+                                <a href="index.html" class="navbar-brand"><span><img src="favicon/android-chrome-150x77.png" alt="Logo" style="width: 50%;"></span></a> 
                                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" style="color: #0539cb;">
                                     <span class="sr-only">Toggle navigation</span>
                                     <span class="icon-bar"></span>
@@ -88,6 +88,7 @@
                             </div>
 
                             <div class="navbar-collapse collapse">
+
                                 <nav>
                                     <ul class="nav navbar-nav navbar-right">
                                         <li class="active"><a class="smooth-menu" href="#home">Home</a></li>
@@ -980,7 +981,7 @@
                 <div class="row">
                     <div class="col-md-3 col-sm-6">
                         <div class="single-footer-top xs-mb-30 sm-mb-30">
-                            <h4>About <b> <span><img src="favicon/favicon.ico" alt="Logo"></span></b></h4> <!--edit logo-->
+                            <h4><b> <span><img src="favicon/android-chrome-150x77.png" alt="Logo"></span></b></h4> <!--edit logo-->
                             <p>Graphic Design, Color Print, Mug Print, Tshirt Print, Banner Print, Sticker Print, Flex Print</p>
                             <ul class="social-list">
                                 <li><a class="facebook" href="https://www.facebook.com/aryadesignprints"><i class="fa fa-facebook"></i></a></li>
@@ -1027,14 +1028,7 @@
                     <div class="col-md-3 col-sm-6">
                         <div class="single-footer-top photo-galleries">
                             <h4>Photo gallery</h4>
-                            <!--<ul>
-                                <li><a class="zoom1" href="images/portfolio/port-1.jpg"><img src="images/portfolio/port-1.jpg" alt="photo image"></a></li> &lt;!&ndash;edit image&ndash;&gt;
-                                <li><a class="zoom1" href="images/portfolio/port-2.jpg"><img src="images/portfolio/port-2.jpg" alt="photo image"></a></li> &lt;!&ndash;edit image&ndash;&gt;
-                                <li><a class="zoom1" href="images/portfolio/port-3.jpg"><img src="images/portfolio/port-3.jpg" alt="photo image"></a></li> &lt;!&ndash;edit image&ndash;&gt;
-                                <li><a class="zoom1" href="images/portfolio/port-4.jpg"><img src="images/portfolio/port-4.jpg" alt="photo image"></a></li> &lt;!&ndash;edit image&ndash;&gt;
-                                <li><a class="zoom1" href="images/portfolio/port-5.jpg"><img src="images/portfolio/port-5.jpg" alt="photo image"></a></li> &lt;!&ndash;edit image&ndash;&gt;
-                                <li><a class="zoom1" href="images/portfolio/port-6.jpg"><img src="images/portfolio/port-6.jpg" alt="photo image"></a></li> &lt;!&ndash;edit image&ndash;&gt;
-                            </ul>-->
+                        
 
 
                             <div class="row">
