changes in team member

--- a/index.html
+++ b/index.html
@@ -609,21 +609,21 @@
                 <div class="col-md-4 col-sm-6">
                     <div class="team-member lg-mb-30 xs-mb-30 sm-mb-30">
                         <div class="team-image team-overlay">
-                            <img src="images/team/arya/jagat.png" alt="team image" class="img-responsive"> <!--edit image-->
+                            <img src="images/team/arya/pratik.png" alt="team image" class="img-responsive"> <!--edit image-->
                             <div class="social-area">
                                 <div class="team-text">
                                     <div class="team-text-middle">
                                         <ul class="list-inline">
-                                            <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                            <li><a href="https://www.facebook.com/profile.php?id=100089722838226"><i class="fa fa-facebook"></i></a></li>
+                                            <li><a href="https://www.instagram.com/pratikjbogati?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="><i class="fa fa-instagram"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="team-designation">
-                            <h2>Jagat Kadayat</h2>
-                            <p>Graphic Designer</p>
+                            <h2>Pratik Jung Bogati</h2>
+                            <p>Supervisor</p>
                         </div>
                     </div>
                 </div>
@@ -667,7 +667,7 @@
                         </div>
                         <div class="team-designation">
                             <h2>Rubina Shrestha</h2>
-                            <p>Photocopy Operator</p>
+                            <p>Photocopy/Computer Operator</p>
                         </div>
                     </div>
                 </div>
